	'libp/Makefile.am'.
2014-09-17 Fred Gleason <fredg@paravelsystems.com>
	* Fixed warnings in 'libp/asterisk_driver.cpp'.
	* Fixed warnings in 'libp/edit_connection_data.cpp'.
	* Fixed warnings in 'libp/escapestring.cpp'.
	* Fixed warnings in 'libp/message_data.cpp'.
	* Fixed warnings in 'libp/ml_timeslot.cpp'.
	* Fixed warnings in 'libp/mlconf.cpp'.
	* Fixed warnings in 'libp/mllabel.cpp'.
	* Fixed warnings in 'libp/mlttydevice.cpp'.
	* Fixed warnings in 'mlhpi/mlplaystream.cpp'.
	* Fixed warnings in 'mlhpi/mlsoundcard.cpp'.
	* Fixed warnings in 'mlhpi/mlrecordstream.cpp'.
	* Fixed warnings in 'mlhpi/mlwavefile.cpp'.
	* Fixed warnings in 'mdbadmin/edit_show.cpp'.
	* Fixed warnings in 'mdbadmin/opendb.cpp'.
	* Fixed warnings in 'mcallman/standard_age_report.cpp'.
	* Fixed warnings in 'mlm/mlm_airtools.c'.
	* Fixed warnings in 'mlm/mlm_remora.c'.
	* Fixed warnings in 'mlmh/mlm_functions.cpp'.
	* Fixed warnings in 'mlmh/vguest.cpp'.
	* Fixed warnings in 'mcs/mskimmer_widget.cpp'.
2014-09-17 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'libp/mlpushbutton.cpp' that broke compilation
	on OS X MAvericks.
	* Fixed a bug in 'configure.ac' that broke compilation
	on OS X MAvericks.
	* Added 'compile' and 'ltmain.sh' to the MAINTAINERCLEANFILES list
	in 'Makefile.am'.
2014-09-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'ml/mithlond.cpp' that broke detection of bundled
	configuration under OS X.
2014-09-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'libp/mldconfig.cpp' that broke the build under
	Windows.
2014-09-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.1.2.
2014-09-29 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'make rpm' target to use home based build tree.
2014-09-29 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.1.3.
2015-10-05 Fred Gleason <fredg@paravelsystems.com>
	* Added a check for OpenSSL in 'configure.ac'.