@@ -120,6 +120,7 @@ SizeY=165
 Nickname=
 ScrollbackLines=100
 HangTime=5000
+PreserveText=No
 
 [Clock]
 Orientation=Vertical
