@@ -2672,3 +2672,6 @@
 	* Incremented the package version to 2.1.3.
 2015-10-05 Fred Gleason <fredg@paravelsystems.com>
 	* Added a check for OpenSSL in 'configure.ac'.
+2015-10-05 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'PreserveText=' directive in the '[MessageBox]' section
+	of ml.conf(5).
